# lox-haskell

./: crafting-interpreters.cabal  expr.lox  fib.lox  hello.lox  install.sh  mandelbrot.lox  program.lox  repl.sh  run.sh  test-watch.sh  test.sh  tokens.lox  watch.sh
app/: Ast.hs  Environment.hs  Interpreter.hs  Main.hs  Native.hs  Parser.hs  Result.hs  Scanner.hs  Test.hs  Token.hs  Types.hs  Value.hs
