cabal-version: 2.4
name:          crafting-interpreters
version:       0.1.0.0
author:        konnik
maintainer:    niklas.konstenius@gmail.com

executable hlox
  ghc-options:        -Wall -Werror
  main-is:            Main.hs
  other-modules:
    Ast
    Environment
    Interpreter
    Parser
    Result
    Scanner
    Token
    Value

  build-depends:
    , base        ^>=4.18.0.0
    , containers

  hs-source-dirs:     app
  default-language:   GHC2021
  default-extensions:
    DuplicateRecordFields
    OverloadedRecordDot
